# CS301_Bootcamp

./: 0 - READ ME FIRST.md  1 - Setting up the IDE (IMPORTANT).md  2 - Compiler Setup (MacOS).md  2 - Compiler Setup (Windows).md  CMakeLists.txt  README.md
Day 1/: CMakeLists.txt
Day 1/- Slides/: CS301_Bootcamp_Scope.pptx  CS301_Bootcamp_Strings.pptx  CS301_Bootcamp_Types_and_Casting.pptx  CS301_Bootcamp_cin_cout_getline.pptx
Day 1/Control Statements/: Control_Statements.md
Day 1/Functions/: CMakeLists.txt  Function_practice.cpp  Functions_Ex_addTogether_GetYesNo.cpp  Functions_practice.cpp
Day 1/Scope/: - Scope.md  CMakeLists.txt  scope_example_1.cpp  scope_example_2.cpp  scope_example_3.cpp  scope_example_4.cpp  scope_example_5.cpp
Day 1/Strings/: - Strings.md  -- String Practice.md  CMakeLists.txt  String_Practice.cpp  String_Practice.h  Vowel_Tester.cpp  c_string_examples.cpp  string_examples.cpp
Day 1/Strings/expected_output/: expected_vowel_output.txt
Day 1/Strings/unit_tests/: StringTests.cpp
Day 1/Types and Casting/: - Types and Casting.md  CMakeLists.txt  Types_and_Casting_Example0.cpp  debugger_example.cpp  types_and_casting.cpp
Day 1/cin cout getline/: - Basic Input Output.md  -- Basic Input Output Practice .md  CMakeLists.txt  Exercise_1.cpp  basic_input_output.cpp
Day 2/: CMakeLists.txt
Day 2/- Slides/: CS301_Bootcamp_Arrays.pptx  CS301_Bootcamp_Functions.pptx  CS301_Bootcamp_Loops.pptx
Day 2/Arrays/: - Arrays.md  -- Array Practice.md  Array_Practice.cpp  Array_Practice.h  CMakeLists.txt  Comparing_Arrays.cpp  Declaring_and_Looping.cpp  LoopMain.cpp  Min_Max_Array.cpp  Outputting_Array.cpp  Setting_Arrays_Equal.cpp  Summing_and_Averaging.cpp  multi_SampleCode.cpp
Day 2/Arrays/expected_output/: expected_output_multi_part_a.txt  expected_output_multi_part_b.txt  expected_output_multi_part_c.txt  expected_output_multi_part_d.txt  expected_output_part1_out.txt  expected_output_part2_out.txt  expected_output_part3_out.txt  expected_output_part4_out.txt
Day 2/Arrays/unit_tests/: ArrayTests.cpp  multi_part_a_main.cpp  multi_part_b_main.cpp  multi_part_c_main.cpp  multi_part_d_main.cpp  part1_main.cpp  part2_main.cpp  part3_main.cpp  part4_input.txt  part4_main.cpp
Day 2/Functions/: CMakeLists.txt
Day 2/Loops/: - Loops.md  -- Loops Practice.md  CMakeLists.txt  Loop_Ex_FizzBuzz.cpp  Loop_Examples.cpp  ShapePrint.cpp  ShapePrint.h  Shape_Main.cpp
Day 2/Loops/expected_output/: expected_pyramid_out.txt  expected_triangle_out.txt
Day 2/Loops/unit_tests/: LoopTests.cpp
Day 3/: CMakeLists.txt
Day 3/- Slides/: CS301_Bootcamp_Classes_and_Structs.pptx  CS301_Bootcamp_Files.pptx  CS301_Bootcamp_Pointers.pptx
Day 3/Classes/: -- Classes and Structs Practice.md  CMakeLists.txt  Card_Game.cpp  Deck.h
Day 3/File Reading and Writing/: - Reading and Writing Files.md  CMakeLists.txt  FileExamples.cpp  FileExamples.h  FileMain.cpp  array_file.txt  name_age.txt
Day 3/Pointers/: -- Pointer Practice.md  CMakeLists.txt  Pointers_Ex_basic_new_usage.cpp  Pointers_Ex_basic_usage.cpp  Pointers_Ex_comparison_issue.cpp  Pointers_Ex_dynamic_array_basic_usage.cpp  Pointers_Ex_dynamic_multidimensional_basic_usage.cpp  Pointers_Ex_functions.cpp  Pointers_Example.cpp  Pointers_exercise.cpp  inputFile.txt
Day 4/: CMakeLists.txt
Day 4/- Slides/: CS301_Bootcamp_Linked_Lists.pptx
Day 4/Classes/: CMakeLists.txt  Classes_Ex_Employee_Pay.cpp  Deck.cpp  Deck.h
Day 4/Classes/unit_tests/: ClassTests.cpp
Day 4/Linked Lists/: - Linked List.md  CMakeLists.txt  DeleteNode.cpp  DeleteNode.h  Exercise_3_main.cpp  LinkListInt.cpp
Day 4/Linked Lists/unit_tests/: link_list_tests.cpp  linked_list_utils.h
Day 5/Linked Lists/: -- Linked List Practice.md  Exercise_1_and_2_main.cpp  FindPriorNode.cpp  FindPriorNode.h  LinkListInt.cpp  LinkListInt.h  link_list_examples.cpp
catch/: catch_main.cpp  unit_test_utils.cpp  unit_test_utils.h
